Changed array type, added new dimension to array in order to store the greatest numbers, clicks, mean and deviation. Incorporated mean per sequence, deviation per sequence and a function to calculate deviation.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Ignore exe files:
 *.exe
 
+# Ignore files starting with 'test'
+Test*
+
 # Keep on ignoring:
 /files*number*generator.*
 /Doodle.*
