--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
 
-# Ignore VS code files:
+# Ignore directories:
 .vscode/
+Images/
+Sample Outputs/
+Trash/
 
 # Ignore text files:
 *.txt
 
-# Ignore exe files:
+# Ignore extentions:
 *.exe
+*.o
 
 # Ignore files starting with 'test':
 Test*
-
-# Ignore files of format 'o':
-*.o
 
 # Keep on ignoring:
 /files*number*generator.*
